2004-09-01  Sam Steingold  <sds@gnu.org>

	* init.lisp (search-file): pathname.d:simplify_directory()
	replaces ".." in pathname-directory with :up, so we need to check
	for :up instead of ".."
	Reported by Jörg Höhle  <hoehle@users.sourceforge.net>

2004-09-01  Sam Steingold  <sds@gnu.org>

	* foreign.d (find_name) [WIN32_NATIVE]: check the return values of
	both EnumProcessModules() calls

2004-07-10  Bruno Haible  <bruno@clisp.org>

	* clos-genfun2.lisp (make-fast-gf): Remove function.
	* clos-genfun3.lisp (make-generic-function, do-defmethod): Use
	make-generic-function-instance instead of make-fast-gf.

2004-07-10  Bruno Haible  <bruno@clisp.org>

	* clos-genfun2.lisp (%make-gf): Remove function.
	(make-fast-gf): Inline its previous definition.

2004-07-10  Bruno Haible  <bruno@clisp.org>

	* clos-genfun3.lisp (do-defgeneric): Remove function.
	(defgeneric): Expand into a call to ensure-generic-function instead of
	do-defgeneric.
	* clos-genfun5.lisp (ensure-generic-function-using-class): Define using
	allow-making-generic.

2004-09-01  Jörg Höhle  <hoehle@users.sourceforge.net>

	* foreign1.lisp (parse-c-type): add define-compiler-macro
	to inline primitive types.
	* foreign1.lisp (with-c-var, with-foreign-object): optimize
	c-type `(c-array[-max] type ,foo) (typical variable-length array)
	
2004-08-31  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-object@integer): do not use TYPE-OF to
	print representation (fixnum vs bignum) because TYPE-OF returns a
	range like (INTEGER 0 16777215)

2004-08-31  Sam Steingold  <sds@gnu.org>

	support (:library :default) on win32
	* foreign.d [WIN32_NATIVE]: include <psapi.h>
	(open_library) [WIN32_NATIVE]: accept :DEFAULT
	(find_name) [WIN32_NATIVE]: when handle is NULL, use
	EnumProcessModules() to search all loaded libraries
	* makemake.in (LIBS) [win32]: link against psapi
	(makevars): depend on Makefile

2004-06-24  Bruno Haible  <bruno@clisp.org>

	* init.lisp: Export ensure-generic-function-using-class.