@@ -1,5 +1,10 @@
 2004-09-01  Sam Steingold  <sds@gnu.org>
 
+	* foreign1.lisp (DEF-CALL-OUT, DEF-C-VAR):
+	evaluate the :LIBRARY argument
+
+2004-09-01  Sam Steingold  <sds@gnu.org>
+
 	* init.lisp (search-file): pathname.d:simplify_directory()
 	replaces ".." in pathname-directory with :up, so we need to check
 	for :up instead of ".."
@@ -35,7 +40,7 @@
 	to inline primitive types.
 	* foreign1.lisp (with-c-var, with-foreign-object): optimize
 	c-type `(c-array[-max] type ,foo) (typical variable-length array)
-	
+
 2004-08-31  Sam Steingold  <sds@gnu.org>
 
 	* describe.lisp (describe-object@integer): do not use TYPE-OF to
